--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -36,3 +36,6 @@ jobs:
 
       - name: Terraform Plan
         run: terraform plan
+      
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
